{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 60,
  "lineage": "81c0d434-5134-ddae-361b-5472e7491a87",
  "resources": [
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "engine_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:337909771629:internet-gateway/igw-0eb4e51f3a891b19b",
            "id": "igw-0eb4e51f3a891b19b",
            "owner_id": "337909771629",
            "tags": {
              "Name": "chess-engine-igw"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-igw",
              "Project": "ChessCloud"
            },
            "vpc_id": "vpc-0cf36f745c06cf3f4"
          },
          "dependencies": [
            "module.engine.aws_vpc.engine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_lb",
      "name": "engine_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:loadbalancer/app/chess-engine-lb-20250422022433/c938d78a17b54c87",
            "arn_suffix": "app/chess-engine-lb-20250422022433/c938d78a17b54c87",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "chess-engine-lb-20250422022433-1708754428.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:loadbalancer/app/chess-engine-lb-20250422022433/c938d78a17b54c87",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chess-engine-lb-20250422022433",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0229a18b2d8689c3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092ac6bdc75db1b64"
              },
              {
                "subnet_id": "subnet-0f7aa0aa504c7496a"
              }
            ],
            "subnets": [
              "subnet-092ac6bdc75db1b64",
              "subnet-0f7aa0aa504c7496a"
            ],
            "tags": {
              "Name": "chess-engine-lb"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-lb",
              "Project": "ChessCloud"
            },
            "vpc_id": "vpc-0cf36f745c06cf3f4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.engine.aws_security_group.ecs_sg",
            "module.engine.aws_subnet.public_subnets",
            "module.engine.aws_vpc.engine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:listener/app/chess-engine-lb-20250422022433/c938d78a17b54c87/3fc04f999d2b82b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:targetgroup/chess-engine-tg-20250422022422/e0a2d8bc1da0e367",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:listener/app/chess-engine-lb-20250422022433/c938d78a17b54c87/3fc04f999d2b82b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:loadbalancer/app/chess-engine-lb-20250422022433/c938d78a17b54c87",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Project": "ChessCloud"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.engine.aws_lb.engine_lb",
            "module.engine.aws_lb_target_group.engine_tg",
            "module.engine.aws_security_group.ecs_sg",
            "module.engine.aws_subnet.public_subnets",
            "module.engine.aws_vpc.engine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "engine_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:targetgroup/chess-engine-tg-20250422022422/e0a2d8bc1da0e367",
            "arn_suffix": "targetgroup/chess-engine-tg-20250422022422/e0a2d8bc1da0e367",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:337909771629:targetgroup/chess-engine-tg-20250422022422/e0a2d8bc1da0e367",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "chess-engine-tg-20250422022422",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Project": "ChessCloud"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cf36f745c06cf3f4"
          },
          "dependencies": [
            "module.engine.aws_vpc.engine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:337909771629:route-table/rtb-0b6abfdf2c482fd19",
            "id": "rtb-0b6abfdf2c482fd19",
            "owner_id": "337909771629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb4e51f3a891b19b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chess-engine-public-rt"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-public-rt",
              "Project": "ChessCloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf36f745c06cf3f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.engine.aws_internet_gateway.engine_igw",
            "module.engine.aws_vpc.engine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5ecdd3f28928863",
            "route_table_id": "rtb-0b6abfdf2c482fd19",
            "subnet_id": "subnet-0f7aa0aa504c7496a"
          },
          "dependencies": [
            "module.engine.aws_internet_gateway.engine_igw",
            "module.engine.aws_route_table.public_route_table",
            "module.engine.aws_subnet.public_subnets",
            "module.engine.aws_vpc.engine_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e40f59d8ff69c110",
            "route_table_id": "rtb-0b6abfdf2c482fd19",
            "subnet_id": "subnet-092ac6bdc75db1b64"
          },
          "dependencies": [
            "module.engine.aws_internet_gateway.engine_igw",
            "module.engine.aws_route_table.public_route_table",
            "module.engine.aws_subnet.public_subnets",
            "module.engine.aws_vpc.engine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:337909771629:security-group/sg-0229a18b2d8689c3e",
            "description": "Security group for chess engine ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0229a18b2d8689c3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chess-engine-ecs-sg",
            "name_prefix": "",
            "owner_id": "337909771629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chess-engine-ecs-sg"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-ecs-sg",
              "Project": "ChessCloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf36f745c06cf3f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.engine.aws_vpc.engine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:337909771629:subnet/subnet-0f7aa0aa504c7496a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7aa0aa504c7496a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909771629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chess-engine-subnet-1"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-subnet-1",
              "Project": "ChessCloud"
            },
            "vpc_id": "vpc-0cf36f745c06cf3f4"
          },
          "dependencies": [
            "module.engine.aws_vpc.engine_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:337909771629:subnet/subnet-092ac6bdc75db1b64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092ac6bdc75db1b64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909771629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chess-engine-subnet-2"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-subnet-2",
              "Project": "ChessCloud"
            },
            "vpc_id": "vpc-0cf36f745c06cf3f4"
          },
          "dependencies": [
            "module.engine.aws_vpc.engine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.engine",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "engine_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:337909771629:vpc/vpc-0cf36f745c06cf3f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0489bbb7c8cc00df8",
            "default_route_table_id": "rtb-01b7ddc274110c2aa",
            "default_security_group_id": "sg-0b1736e6ef0ea7260",
            "dhcp_options_id": "dopt-02ada7d880deca586",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf36f745c06cf3f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b7ddc274110c2aa",
            "owner_id": "337909771629",
            "tags": {
              "Name": "chess-engine-vpc"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chess-engine-vpc",
              "Project": "ChessCloud"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}